src/App.css
@import "./styles/_font.css";

html {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

html::-webkit-scrollbar {
  display: none;
}

*{
  box-sizing: border-box;
  text-decoration: none;
  padding: 0;
  margin: 0;
  font-family: 'Satoshi-Medium';
}

a {
  color: inherit;
}

